# Hackfest25-30

./: .gitignore  config.py  context.md  drone_simulation.db  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  test_endpoints.sh  vite.config.ts
backend/: .gitignore  README.md  config.py  main.py  requirements.txt  run_server.py  websocket_endpoints.py
backend/api/: fleet.py
backend/components/: DroneMonitor.jsx
backend/drone_optimizer/: Cargo.toml  wrapper.py
backend/drone_optimizer/src/: lib.rs
backend/services/: collision_avoidance.py  database_service.py  dataset_service.py  drone_simulation.py  fleet_manager.py  routing_service.py  simulation_service.py
backend/templates/: drone_test.html  fleet_management.html
backend/tests/: conftest.py
dataset/large/: Map_Data_Large_with_Geofencing.xlsx  Surveillance_Drones_Large_Dataset.xlsx
dataset/small/: Delivery_Drones_Small_Dataset.xlsx  delivery_points.csv
docs/: api_documentation.md  frontend_implementation.md
drone_optimizer/: README.md
models/: drone_simulation.py
services/: collision_avoidance.py  database_service.py  dataset_service.py  fleet_manager.py  routing_service.py  simulation_service.py
src/: App.tsx  index.css  index.html
src/api/: fleetApi.ts  fleetWebSocket.ts
src/components/: AnimatedButton.tsx  AnimatedCard.tsx  AnimatedMetrics.tsx  AnimatedPage.tsx  AnimatedSection.tsx  AnimatedText.tsx  (+8 more)
static/: styles.css
templates/: drone_management.html  drone_routing.html  fleet_management.html
uatm/: package-lock.json  package.json
(+28 files in other folders)
