[package]
name = "drone_optimizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "drone_optimizer"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
smartcore = "0.3.1"
ndarray = "0.15"
ndarray-rand = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.18", features = ["extension-module"] }
rayon = "1.7" 